Revision history for Perl extension Parse::HTTP::UserAgent.

Time zone is UTC+2.

0.14 Fri Aug 28 10:30:49 2009
   => Pod updates.

0.13 Thu Aug 27 07:19:32 2009
   => Monolithic version is now bundled.

0.12 Thu Aug 27 06:55:49 2009
   => Use version->new() instead of qv().
   => Moved accessors into base class.
   => Moved all base classes into ::Base::.

0.11 Wed Aug 26 08:43:04 2009
   => Add Trident detection to msie parser. remove duplicate from maxthon.

0.10 Tue Aug 25 09:39:48 2009
   => First release.