@@ -1549,19 +1549,15 @@ Opera/8.01 (J2ME/MIDP; Opera Mini/1.0.1479/HiFi; SonyEricsson P900; no; U; ssr)
 [AGENT]
 
 # edge case
-#TODO:
-
 Mozilla/4.0 (compatible; Opera/3.0; Windows 4.10) 3.50
 
-'parser' => 'generic_compatible',
-'os' => 'Windows 4.10',
-'extras' => [
-              '3.50'
-            ],
+'parser'      => 'generic_compatible',
+'os'          => 'Windows 98',
+'extras'      => [ '3.50' ],
 'version_raw' => '3.0',
-'version' => '3.000',
-'name' => 'Opera',
-'generic' => 1
+'version'     => '3.000',
+'name'        => 'Opera',
+'generic'     => 1,
 
 [AGENT]
 
@@ -1575,7 +1571,7 @@ Opera/9.62 (Windows NT 5.1; U; tr) Presto/2.1.1
 'lang'        => 'tr',
 'version'     => '9.620',
 'name'        => 'Opera',
-'toolkit'     => ['Presto','2.1.1','2.001001']
+'toolkit'     => ['Presto','2.1.1','2.001001'],
 
 [AGENT]
 
@@ -1848,13 +1844,13 @@ Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7.2) Gecko/20040825 
 
 Mozilla/5.0 (compatible; Googlebot/2.1; +http://www.google.com/bot.html)
 
-'parser' => 'generic_compatible',
-'extras' => ['http://www.google.com/bot.html'],
+'parser'      => 'generic_compatible',
+'extras'      => ['http://www.google.com/bot.html'],
 'version_raw' => '2.1',
-'version' => '2.100',
-'name' => 'Googlebot',
-'generic' => 1,
-robot => 1,
+'version'     => '2.100',
+'name'        => 'Googlebot',
+'generic'     => 1,
+'robot'       => 1,
 
 [AGENT]
 # googlebot mobile
@@ -1898,39 +1894,31 @@ msnbot/1.1 (+http://search.msn.com/msnbot.htm)
 robot => 1,
 
 [AGENT]
-# Twiceler
+
 #TODO: Mozilla/5.0 (Twiceler-0.9 http://www.cuill.com/twiceler/robot.html)
 
 [AGENT]
 
 curl/7.13.0 (i686-suse-linux) libcurl/7.13.0 OpenSSL/0.9.7e zlib/1.2.2
 
-'parser' => 'generic_moz_thing',
-'extras' => [
-              'i686-suse-linux',
-              'libcurl/7.13.0',
-              'OpenSSL/0.9.7e',
-              'zlib/1.2.2'
-            ],
+'parser'      => 'generic_moz_thing',
+'extras'      => [ 'i686-suse-linux', 'libcurl/7.13.0', 'OpenSSL/0.9.7e', 'zlib/1.2.2' ],
 'version_raw' => '7.13.0',
-'version' => '7.013000',
-'name' => 'curl',
-'generic' => 1,
-robot => 1,
+'version'     => '7.013000',
+'name'        => 'curl',
+'generic'     => 1,
+'robot'       => 1,
 
 [AGENT]
 
 Links (2.1pre15; Linux 2.4.26-vc4 i586; x)
 
-'parser' => 'generic_moz_thing',
-'extras' => [
-              'Linux 2.4.26-vc4 i586',
-              'x'
-            ],
+'parser'      => 'generic_moz_thing',
+'extras'      => [ 'Linux 2.4.26-vc4 i586', 'x' ],
 'version_raw' => '2.1pre15',
-'version' => '2.115',
-'name' => 'Links',
-'generic' => 1
+'version'     => '2.115',
+'name'        => 'Links',
+'generic'     => 1,
 
 [AGENT]
 
@@ -2012,15 +2000,87 @@ Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1; .NET CLR 1.1.4322; .NET 
 'name'        => 'Lunascape',
 'dotnet'      => ['1.1.4322','2.0.50727']
 
+# ----[ CATEGORY: Epiphany
+
+[AGENT]
+
+Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.0.14eol) Gecko/20070505 (Debian-1.8.0.15~pre080323b-0etch2) Epiphany/2.14
+
+'parser'      => 'mozilla_family:generic',
+'strength'    => 'U',
+'os'          => 'Linux i686',
+'extras'      => [ 'X11', 'Debian-1.8.0.15~pre080323b-0etch2', 'Epiphany/2.14' ],
+'toolkit'     => [ 'Gecko', '20070505', '20070505.000' ],
+'version_raw' => '2.14',
+'lang'        => 'en-US',
+'version'     => '2.140',
+'mozilla'     => ['1.8.0.14','1.008000014'],
+'name'        => 'Epiphany',
+
+[AGENT]
+
+Mozilla/5.0 (X11; U; Linux i686; en; rv:1.9.0.11) Gecko/20080528 Epiphany/2.22 Firefox/3.0
+
+'parser' => 'mozilla_family:generic',
+'strength' => 'U',
+'os' => 'Linux i686',
+'extras' => [
+              'X11'
+            ],
+'toolkit' => [
+               'Gecko',
+               '20080528',
+               '20080528.000'
+             ],
+'version_raw' => '2.22',
+'lang' => 'en',
+'version' => '2.220',
+'mozilla' => [
+               '1.9.0.11',
+               '1.009000011'
+             ],
+'name' => 'Epiphany',
+
+[AGENT]
+
+Mozilla/5.0 (X11; U; Linux x86_64; c) AppleWebKit/525.1+ (KHTML, like Gecko, Safari/525.1+) epiphany
+
+'parser' => 'safari',
+'strength' => 'U',
+'os' => 'Linux x86_64',
+'extras' => [
+              'X11',
+              'KHTML, like Gecko, Safari/525.1+'
+            ],
+'toolkit' => [
+               'AppleWebKit',
+               '525.1+',
+               '525.100'
+             ],
+'lang' => 'c',
+'name' => 'Epiphany',
+
+[AGENT]
+
+Mozilla/5.0 (X11; U; Linux i686; en-us) AppleWebKit/528.5+ (KHTML, like Gecko, Safari/528.5+) epiphany-browser
+
+'parser' => 'safari',
+'strength' => 'U',
+'os' => 'Linux i686',
+'extras' => [
+              'X11',
+              'KHTML, like Gecko, Safari/528.5+'
+            ],
+'toolkit' => [
+               'AppleWebKit',
+               '528.5+',
+               '528.500'
+             ],
+'lang' => 'en-us',
+'name' => 'Epiphany',
+
+
 # ----[ CATEGORY: Various
-
-[AGENT]
-
-#TODO: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.0.14eol) Gecko/20070505 (Debian-1.8.0.15~pre080323b-0etch2) Epiphany/2.14
-
-[AGENT]
-
-#TODO: Mozilla/4.0 WebTV/2.6 (compatible; MSIE 4.0)
 
 [AGENT]
 
@@ -2085,11 +2145,6 @@ Konqueror/1.1.2
 
 [AGENT]
 
-
-#TODO: Lynx/2.8.4rel.1 libwww-FM/2.14 SSL-MM/1.4.1 OpenSSL/0.9.6c
-
-[AGENT]
-
 Links (0.96; Unix)
 
 'parser'      => 'generic_moz_thing',
@@ -2102,11 +2157,27 @@ Links (0.96; Unix)
 
 [AGENT]
 
+#TODO: Mozilla/4.0 WebTV/2.6 (compatible; MSIE 4.0)
+
+[AGENT]
+
+#TODO: Lynx/2.8.4rel.1 libwww-FM/2.14 SSL-MM/1.4.1 OpenSSL/0.9.6c
+
+[AGENT]
+
 #TODO: Lynx/2.8.3rel.1 libwww-FM/2.14
 
 [AGENT]
 # HotJava
 #TODO: Mozilla/3.0 (x86 [en] Windows NT 5.1; Sun)
+
+[AGENT]
+
+#TODO: BlackBerry7730/3.7.1 UP.Link/5.1.2.5
+
+[AGENT]
+
+#TODO: Emacs-W3/2.1.105 URL/1.267 ((Unix?) ; TTY ; sparc-sun-solaris2.3)
 
 [AGENT]
 
@@ -2119,10 +2190,6 @@ fetch/1.0 FreeBSD/4.0-CURRENT (i386)
 'version'     => '1.000',
 'name'        => 'fetch',
 'generic'     => 1
-
-[AGENT]
-
-#TODO: BlackBerry7730/3.7.1 UP.Link/5.1.2.5
 
 [AGENT]
 
@@ -2171,10 +2238,6 @@ Nokia-WAP-Toolkit/1.3beta
 'generic'     => 1
 
 # ----[ CATEGORY: name/version (foo)
-
-[AGENT]
-
-#TODO: Emacs-W3/2.1.105 URL/1.267 ((Unix?) ; TTY ; sparc-sun-solaris2.3)
 
 [AGENT]
 
